--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/ryhinchey/realworld-starter-kit#readme",
   "dependencies": {
-    "@bikeshaving/crank": "^0.1.3"
+    "@bikeshaving/crank": "^0.1.3",
+    "history": "^4.10.1",
+    "path-to-regexp": "^6.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
