--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@bikeshaving/crank": "^0.1.3",
     "history": "^4.10.1",
+    "marked": "^1.0.0",
     "path-to-regexp": "^6.1.0"
   },
   "devDependencies": {
